@@ -1,10 +1,0 @@
-DEFINED_PHASES=install unpack
-DESCRIPTION=Protein secondary structure assignment from atomic coordinates
-HOMEPAGE=http://webclu.bio.wzw.tum.de/stride/
-KEYWORDS=~amd64 ~ppc ~x86
-LICENSE=STRIDE
-RESTRICT=mirror bindist
-SLOT=0
-SRC_URI=ftp://ftp.ebi.ac.uk/pub/software/unix/stride/src/stride.tar.gz mirror://gentoo/stride-20060723-update.patch.bz2
-_eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=e27e1aa3ae05ef052d171f8417d59aee
