@@ -4,14 +4,25 @@ Hash: SHA512
 AUX stride-LDFLAGS.patch 280 SHA256 3b2387a0649d76a24d5e9ed611ec3da43ca7844a3ce3704ebbad63699328fd10 SHA512 d3fc5fec53066fc5f015a2b741bf5e3a236db4eee04ae7908912036c0be004e9827228b9153188f2304c91eb44e9d029996b4d86eee7baf0d109ae87776504f8 WHIRLPOOL 97e620a9e57d76ff74bb973bea2f0841db6480856aecaee0d3ecc0da7a7889862613bdaf8675227b3207b9f19a4c358127e66880ce733b170adc27f21fcdaf8e
 DIST stride-20060723-update.patch.bz2 5621 SHA256 8d48627c294b4efba67acba10fba47b20c0a8d5f7e06c2775a2d7eaaa0aa7b81 SHA512 e06eb68b907615e12dc1a9981be157400e9ffed9391a906cb4eb3ef4067b7027c26cc600298053bfc5d2bbbebbbfefe0e6b18d0e4f6fef2172768e6f95498af1 WHIRLPOOL fbe19cd7da96a845a001f5fcfb6c0aed7b9c4c152b48ef9ab9df63b1d72c9a97e545c9a6e12c5c58823210dd48050392b0a9c0758c1d57c3677ac5092de863f9
 DIST stride.tar.gz 56441 SHA256 d272700bccd046199f6ea1faed31a2a2662a7d5f13b7663736a1818ac18c87b9 SHA512 cbd40fce4684728f363520540132fc1a0003126954a145d59aeff48adb20fdaa66520bd12b56ee5d2906e8ea97bf78a225204105b820f7f368aee5e790a6471b WHIRLPOOL 843c789eda18da69a670a134f8a19103381ac86d611a3e1f0b47e17c3d171a195b8064d131ec3f81a561a65d8536d5f8a8c3a490776646b50ecb6aee36c46536
-EBUILD stride-20011129-r1.ebuild 1012 SHA256 35fe3d1e0b2911b3e00f402946e915b39a70091dafbedd0d4585ffb8ffbf2123 SHA512 69071b8b31be5e8a1cbb4af110194d15629f3dcd452b26ce730a4afe92b35fc777961108416edf67075ed7a976795f3dcde7feef9c0d37d360a7ca688bc5f911 WHIRLPOOL d3bd88a0061bae1ecda9b2040922f6ef25c36aa5fd91f13124d2c4896fb83a7150c65c7e6d548be57af80568d141c62ff56b722ccd8bbce49619818254e6d46c
-EBUILD stride-20011129.ebuild 989 SHA256 993e295fe9cb1627679638d9aee9e5206c78713054334fcead5c2fc7a2a92a59 SHA512 d2c85c4bd7a7c7277de4332a03bdf123304e237110ee307c6f8b159daa6e6c68768f88915f22545ef995aff04f554d9dfa6bb81553df66a5a25e044e3b49d5b1 WHIRLPOOL 6a331f1c882fb4b5d181b649ceda81f0acb1597b1aab1fe7bfc79bc914d2a368b02f025edc87d5f8603490af00bd95c2cfc425773411d9b53431b0528a4e6844
-MISC ChangeLog 2140 SHA256 26301e920897bebae2953ec57e5a8e5503bfc7f6ab7a739ed4ea62a6409dd38c SHA512 2da7c1edffd6642dd2683a2e00be2159fde69bed87daadecdb401dda18c754a9713281fb1c769a211b5912faf640e3387e23530c2f13b25f85481c862eae197c WHIRLPOOL 75e170d07b4954e1ff95f5b84a5a1d335c15778e143804203e9821b3db6492dfa42a6d20e2b81aae86879069f414dadedc9fba7cbf3e9f4e2afb02fd14647633
+EBUILD stride-20011129-r1.ebuild 1026 SHA256 060228efb3be48bcdb26f3b91aa26dc4be4dac649ba73d2aa4a12b988167b1f0 SHA512 e9582239d168e5f9ae01ea35f34a934fad4da8b1d1a93c56353c8a135590c7db851158a8b5b1fe9f5ce83d040e2fb2b63755f6dfdc8c183373c8a3509649434e WHIRLPOOL 2cb21724ed516b5321f97f26e9c722cdbd9a10e0583af526938136501f9a067a79b56a3de029151fee7d324906482d062852c7dd80a9a9d6f88ff122318bd80b
+MISC ChangeLog 2280 SHA256 624d0e3606135908b09ffbdae7c08ae4dc86273a8b1705fc71a4ba4af0e9ac45 SHA512 f8faf1840242c1759dd8046250ae5129a02b3decf2594fc54b4aa9676cf976757ea4a15f6e35e1c75c5168c21c43bcc441401fc821eaa28ddea8f588ec3a1649 WHIRLPOOL ffbda2f65c71e42e8176f309dbafaf9c665526908218095df2cbc7d65249810a3148a9d4f2f8fafbfcab08a3060bb9119f85a544eb2ef1ecd8c693c52a694129
 MISC metadata.xml 166 SHA256 29b228f683c71345323d841414e410c929a320f34536eb30910498728260c8ac SHA512 51c5345bb1c4466b73e2feac8895c64fc119365e7f2c156702f4c93664d3aba028b3da9daaabf24f61a88220345fca7806771a252e8ae906cac5dec97862c7e0 WHIRLPOOL 211bf955d94fc1d93b12388a2c597a8d440fb5d78f84d59b2549569537098c3525b1fbab707441d62fabe20edcac2fd9ebe09c5d9870f1c9558d7ee90d5db5b3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iEYEAREKAAYFAlFqtyEACgkQgAnW8HDreRYgkwCferoDXvqn/yiLPgzjI4qhjNLI
-nv8AnjMDIICdYp7LIl9P3yXJ8QrwPwp1
-=aTYh
+iQJ8BAEBCgBmBQJUPL3JXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FViriXMP/2WwohOKAsvy+3Raz+917A5N
+gojGUB0t20fJktxhohStoN50c8DCXQRG3VXAWIF24NKUvMFH0jT/TYiI9cXc26iO
+aZBzfrl6MwkY4/fhXXOOp91K6tizX1ABggIDuxuM3040UsqI67y/CC7T84kdcA7D
+3tWw5aeQMzM6Bbyx96jz7aHXxtb734X4NENaoCJNHj5yZxc1oXUimQE+TrNVGvSS
+jmHej0IOBxFd5pZjBB6OaDgu9MZ2DxZrfbCLRyvyOfuOEBC0jDYnfuYELxy2UWHn
+6OXRTVWw9FvICsSooIHz2U6Tq3wHV5FCpEzoSrYJuRaJE1VZQi7DEXrCztWWh6M5
+dOJC3gbrLni7MG48e8oDE5hfbXIis9SqBDhDHbp31oE6ZQghnm3SD7toK7mLV3MD
+wxxhweKnhqsommIqlaliAvSSapVkPXNRCkV5+awzNIrS+GvvOdv43//HwRxtubBY
+WqyTUpq7XOJqWcgPhbB7Xw1qus8/uwHmdZg7WUnJRDnCR7eiuQLiTdGbl1DoEDLM
+hTafHX4fiJ9hQvtWmbBfpRShWwtFy8l8daQn+kPsFOadiIGuA5mHUSxX8aR9/67n
+OFiE8jt5GckqHh4SBDCQi5UWKPpcd3ow48Dyuh7PT8Nqc4Sf2uq/FzMNlPzZWY/j
+UJuZjsr0uCxr/DwbyDxh
+=PqiP
 -----END PGP SIGNATURE-----
